2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-03-12	Benedikt Meurer <benny@xfce.org>

	* po-doc/, Makefile.am, configure.in.in: Apply Daichi's patch to enable
	  translation of the user manual through .po files, using xml2po.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* helpers/sylpheed-claws.desktop.in: Fix typo.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* helpers/sylpheed-claws.desktop.in, helpers/Makefile.am: Add Sylpheed
	  Claws as MailReader to the helper list. Thanks to Bernhard Walle
	  <bernhard.walle@gmx.de>.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix PACKAGE_BUGREPORT.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in, po/LINGUAS: Read the set of available
	  languages from po/LINGUAS and substitute them when autogen.sh is
	  run. This way we can continue to use glib-gettext.

2006-03-01	Benedikt Meurer <benny@xfce.org>

	* NEWS: Updated news items.

2006-03-01	Benedikt Meurer <benny@xfce.org>

	* TerminalHelp.in: Use exo-open to display the documentation.
	* terminal/terminal-preferences.c(terminal_preferences_class_init):
	  Enable "misc-cycle-tabs" by default.
	* doc/C/: Update the user manual.
	* terminal/Makefile.am, terminal/terminal-dbus.c,
	  terminal/terminal-widget.c: Include <exo/exo.h> instead of
	  <libxfce4util/libxfce4util.h>.

2006-02-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_action_set_title): Apply
	  Daichi's patch to distinguish between the "Set Title" string in the
	  menu action and the "Set Title" string in the dialog title.

2006-02-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c: Add hidden option MiscInheritGeometry
	  which controls whether new windows will inherit the geometry of the
	  parent window.