@@ -1,6 +1,6 @@
 # $Id$
 
-iconsdir = $(datadir)/icons/hicolor/24x24/stock/generic
+iconsdir = $(datadir)/icons/hicolor/24x24/stock/navigation
 icons_DATA =								\
 	stock_terminal-closetab.png					\
 	stock_terminal-closewindow.png					\
