@@ -1,3 +1,11 @@
+2006-04-15	Benedikt Meurer <benny@xfce.org>
+
+	* icons/: stock/generic is no longer present in the hicolor icon theme.
+	  Use stock/navigation instead.
+	* terminal/terminal-preferences-dialog.c
+	  (terminal_preferences_dialog_init): Allow to close the preferences
+	  dialog using Escape.
+
 2006-04-09	Benedikt Meurer <benny@xfce.org>
 
 	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
